
  prints:

                1
       1234567890
     1:   A
     2:      100
    Match word at loc 3(1,4)
         A
         ^
    Matched word -> ['A']
    Match word at loc 11(2,7)
            100
            ^
    Matched word -> ['100']

- Added new example `cuneiform_python.py` to demonstrate creating a new Unicode
  range, and writing a Cuneiform->Python transformer (inspired by zhpy).

- Fixed ParseFatalExceptions failing to override normal exceptions or expression
  matches in MatchFirst expressions. Addresses issue #251, reported by zyp-rgb.

- Fixed bug in which ParseResults replaces a collection type value with an invalid
  type annotation (changed behavior in Python 3.9). Addresses issue #276, reported by
  Rob Shuler, thanks.

- Fixed bug in ParseResults when calling `__getattr__` for special double-underscored
  methods. Now raises AttributeError for non-existent results when accessing a
  name starting with '__'. Addresses issue #208, reported by Joachim Metz.

- Modified debug fail messages to include the expression name to make it easier to sync
  up match vs success/fail debug messages.


Version 3.0.0rc1 - September, 2021
----------------------------------
- Railroad diagrams have been reformatted:
  . creating diagrams is easier - call

        expr.create_diagram("diagram_output.html")

    create_diagram() takes 3 arguments:
    . the filename to write the diagram HTML
    . optional 'vertical' argument, to specify the minimum number of items in a path
      to be shown vertically; default=3
    . optional 'show_results_names' argument, to specify whether results name
      annotations should be shown; default=False
  . every expression that gets a name using setName() gets separated out as
    a separate subdiagram
  . results names can be shown as annotations to diagram items
  . Each, FollowedBy, and PrecededBy elements get [ALL], [LOOKAHEAD], and [LOOKBEHIND]
    annotations
  . removed annotations for Suppress elements