@@ -105,7 +105,7 @@ __version__ = "{}.{}.{}".format(*__version_info__[:3]) + (
     ),
     "",
 )[__version_info__.release_level == "final"]
-__version_time__ = "27 September 2021 10:38 UTC"
+__version_time__ = "28 September 2021 07:21 UTC"
 __versionTime__ = __version_time__
 __author__ = "Paul McGuire <ptmcg@users.sourceforge.net>"
 
@@ -144,6 +144,8 @@ __all__ = [
     "__compat__",
     "__diag__",
     "And",
+    "AtLineStart",
+    "AtStringStart",
     "CaselessKeyword",
     "CaselessLiteral",
     "CharsNotIn",
