@@ -3526,7 +3526,8 @@ class Test02_WithoutPackrat(ppt.TestParseResultsAsserts, TestCase):
 
     def testLineStart3(self):
         # testing issue #272
-        instring = dedent("""
+        instring = dedent(
+            """
         a
          b
           c
@@ -3534,10 +3535,15 @@ class Test02_WithoutPackrat(ppt.TestParseResultsAsserts, TestCase):
         e
          f
           g
-        """)
+        """
+        )
         print(pp.testing.with_line_numbers(instring))
 
-        alpha_line = pp.LineStart().leaveWhitespace() + pp.Word(pp.alphas) + pp.LineEnd().suppress()
+        alpha_line = (
+            pp.LineStart().leaveWhitespace()
+            + pp.Word(pp.alphas)
+            + pp.LineEnd().suppress()
+        )
 
         tests = [
             alpha_line,
@@ -3546,38 +3552,37 @@ class Test02_WithoutPackrat(ppt.TestParseResultsAsserts, TestCase):
             alpha_line | alpha_line,
             pp.MatchFirst([alpha_line, alpha_line]),
             pp.LineStart() + pp.Word(pp.alphas) + pp.LineEnd().suppress(),
-            pp.And([pp.LineStart(), pp.Word(pp.alphas), pp.LineEnd().suppress()])
-            ]
+            pp.And([pp.LineStart(), pp.Word(pp.alphas), pp.LineEnd().suppress()]),
+        ]
         for test in tests:
             print(test.searchString(instring))
-            self.assertEqual(["a", "d", "e"], flatten(sum(test.search_string(instring)).as_list()))
+            self.assertEqual(
+                ["a", "d", "e"], flatten(sum(test.search_string(instring)).as_list())
+            )
 
     def testLineStart4(self):
-        test = dedent('''\
+        test = dedent(
+            """\
         AAA this line
         AAA and this line
           AAA but not this one
         B AAA and definitely not this one
-        ''')
+        """
+        )
 
-        expr = pp.AtLineStart('AAA') + pp.restOfLine
+        expr = pp.AtLineStart("AAA") + pp.restOfLine
         for t in expr.search_string(test):
             print(t)
 
-        self.assertEqual(['AAA', ' this line', 'AAA', ' and this line'], sum(expr.search_string(test)).as_list())
+        self.assertEqual(
+            ["AAA", " this line", "AAA", " and this line"],
+            sum(expr.search_string(test)).as_list(),
+        )
 
     def testStringStart(self):
-        self.assertParseAndCheckList(
-            pp.AtStringStart(pp.Word(pp.nums)),
-            "123",
-            ["123"]
-        )
+        self.assertParseAndCheckList(pp.AtStringStart(pp.Word(pp.nums)), "123", ["123"])
 
-        self.assertParseAndCheckList(
-            pp.AtStringStart("123"),
-            "123",
-            ["123"]
-        )
+        self.assertParseAndCheckList(pp.AtStringStart("123"), "123", ["123"])
 
         with self.assertRaisesParseException():
             pp.AtStringStart(pp.Word(pp.nums)).parse_string("    123")
